--- a/index.html
+++ b/index.html
@@ -20,14 +20,30 @@
 	<div class="container-fluid">
 		<section id="landing">
 			<h1>Full Stack Web Developer</h1>
-			<p>Hi! My name is John Quinnvic and I'm learning to love myself</p>	
+			<p>Hi! My name is John Quinnvic and I'm in the process of achieving max rank in Web Development</p>	
 			<img src="images/face.png" class="img-fluid"id="profile">
 
 			<a href="mailto:quinnvictaboada@gmail.com" class="btn btn-dark btn-lg mt-2
 			 btn-primary">Let's Work Together</a>
+			 <section id="summary">
+  <div class="project-summary">
+  <h2>OPEN TO PROJECTS</h2>
+  <p>I may lack experience in some areas, but I am always willing to learn and know where to look for help. Don't hesitate to contact me with any project ideas you may have!</p>
+</div>
+
+</section>
 		</section>
+		
+
+
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
+<footer>
+  <p>&copy; 2023 John Quinnvic G. Taboada. All rights reserved.</p>
+</footer>
+
+
+
 </html>
